# chimp

./: .gitignore  README.md
client/: index.html  package.json  tsconfig.json  vite.config.ts
client/src/: App.tsx  index.css
client/src/components/: UI.tsx  World.tsx
client/src/hooks/: useAudioStream.ts  useSimulationSocket.ts  useSpeechRecognition.ts  useWebSocket.ts
client/src/store/: appStore.ts
client/src/types/: world.ts
server/: README.md  debug_ws.py  pyproject.toml
server/app/: __init__.py  config.py  graph.py  main.py  memory.py  models.py
server/app/agents/: executor.py  graph.py  interpreter.py  planner.py  verifier.py
server/app/memory/: __init__.py
server/app/services/: tts.py
server/app/world/: executor.py
